<resources>
    <string name="app_name">Represent!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Represent</string>
    <string name="zip_code">Please Enter Zip Code</string>
    <string name="submit">Submit</string>
    <string name="curr_location">Enter Your Current Location</string>
    <string name="result">results found for senator!</string>
    <string name="result2">result found for House Rep!</string>
    <string name="senator_1">Senator 1</string>
    <string name="senator_2">Senator 2</string>
    <string name="house_rep">House Representative</string>
    <string name="democrat">Party:</string>
    <string name="email_1">Email:</string>
    <string name="website_1">Website</string>
    <string name="tweet_1">Last Tweet:</string>
    <string name="email_2">Email:</string>
    <string name="website_2">Website:</string>
    <string name="tweet_2">Last Tweet:</string>
    <string name="email_3">Email:</string>
    <string name="website_3">Website:</string>
    <string name="tweet_3">Last Tweet:</string>
    <string name="title_activity_congressional">congressional</string>
    <string name="title_activity_detailed">detailed</string>
    <string name="terms">Terms End</string>
    <string name="committee">Committee:</string>
    <string name="committee_1">- committee 1</string>
    <string name="committee_2">- committee 2</string>
    <string name="committee_3">- committee 3</string>
    <string name="recent_bill">Most Recent Bill:</string>
    <string name="bill_1">- Bill 1</string>
    <string name="bill_2">- Bill 2</string>
    <string name="bill_3">- Bill 3</string>
</resources>
