<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs160.joleary.catnip.detailed"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/picture"
        android:src="@drawable/mark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="320dp"
        android:layout_marginTop="0dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senator_1"
        android:id="@+id/detailed_name"
        android:layout_alignTop="@+id/picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp"
        android:textSize="20dp"
        android:textColor="#fd0004" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/democrat"
        android:id="@+id/detailed_party"
        android:layout_below="@+id/detailed_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="#fd0000"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:id="@+id/detailed_terms"
        android:layout_alignEnd="@+id/picture"
        android:layout_below="@+id/detailed_party"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/committee"
        android:id="@+id/committee"
        android:layout_below="@+id/detailed_terms"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/detailed_terms"
        android:layout_marginTop="20dp"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/committee_1"
        android:id="@+id/detailed_com_1"
        android:layout_below="@+id/committee"
        android:layout_alignStart="@+id/committee"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/committee_2"
        android:id="@+id/detailed_com_2"
        android:paddingLeft="20dp"
        android:layout_below="@+id/detailed_com_1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/committee_3"
        android:id="@+id/detailed_com_3"
        android:paddingLeft="20dp"
        android:layout_below="@+id/detailed_com_2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_bill"
        android:id="@+id/bill"
        android:layout_below="@+id/detailed_com_3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_1"
        android:id="@+id/detailed_bill_1"
        android:paddingLeft="20dp"
        android:layout_below="@+id/bill"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_2"
        android:id="@+id/detailed_bill_2"
        android:paddingLeft="20dp"
        android:layout_below="@+id/detailed_bill_1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_3"
        android:id="@+id/detailed_bill_3"
        android:paddingLeft="20dp"
        android:layout_below="@+id/detailed_bill_2"
        android:layout_alignParentStart="true" />
</RelativeLayout>
