<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView3"
        android:textSize="18dp"
        android:paddingTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="     2      "
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="visible"
        android:textSize="18dp"
        android:paddingTop="3dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/senator_1"
        android:src="@drawable/dianne_feinstein"
        android:scaleType="fitCenter"
        android:background="#ffffff"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="368dp"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senator_1"
        android:id="@+id/name_1"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3"
        android:layout_alignTop="@+id/senator_1"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/democrat"
        android:id="@+id/party_1"
        android:layout_alignStart="@+id/name_1"
        android:layout_below="@+id/name_1"
        android:layout_alignParentEnd="true"
        android:paddingLeft="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_1"
        android:id="@+id/email_1"
        android:layout_below="@+id/party_1"
        android:layout_alignStart="@+id/party_1"
        android:layout_alignParentEnd="true"
        android:paddingLeft="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_1"
        android:id="@+id/website_1"
        android:paddingLeft="45dp"
        android:layout_below="@+id/email_1"
        android:layout_alignStart="@+id/email_1"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_1"
        android:id="@+id/tweet_1"
        android:paddingLeft="45dp"
        android:layout_below="@+id/website_1"
        android:layout_alignStart="@+id/website_1"
        android:layout_alignParentEnd="true" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@+id/name_1"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/tweet_1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/line2" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/senator_2"
        android:src="@drawable/barbara_boxer"
        android:scaleType="fitCenter"
        android:background="#ffffff"
        android:clickable="true"
        android:layout_below="@+id/line2"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/senator_1"
        android:layout_marginBottom="261dp"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senator_2"
        android:id="@+id/name_2"
        android:paddingLeft="15dp"
        android:layout_below="@+id/line2"
        android:layout_alignStart="@+id/tweet_1"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/democrat"
        android:id="@+id/party_2"
        android:layout_alignParentEnd="true"
        android:paddingLeft="45dp"
        android:layout_below="@+id/name_2"
        android:layout_alignLeft="@+id/tweet_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_2"
        android:id="@+id/email_2"
        android:layout_alignParentEnd="true"
        android:paddingLeft="45dp"
        android:layout_below="@+id/party_2"
        android:layout_alignLeft="@+id/tweet_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_2"
        android:id="@+id/website_2"
        android:paddingLeft="45dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/email_2"
        android:layout_alignLeft="@+id/tweet_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_2"
        android:id="@+id/tweet_2"
        android:paddingLeft="45dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/website_2"
        android:layout_alignLeft="@+id/tweet_1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/tweet_2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/line3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result2"
        android:id="@+id/textView14"
        android:textSize="18dp"
        android:paddingTop="3dp"
        android:layout_alignTop="@+id/line3"
        android:layout_toEndOf="@+id/textView15"
        android:paddingLeft="10dp"
        android:layout_alignStart="@+id/tweet_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="    1    "
        android:id="@+id/textView15"
        android:visibility="visible"
        android:textSize="18dp"
        android:paddingTop="3dp"
        android:layout_alignTop="@+id/line3"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/line4" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/house_rep"
        android:src="@drawable/mark"
        android:scaleType="fitCenter"
        android:background="#ffffff"
        android:clickable="true"
        android:layout_below="@+id/line4"
        android:layout_marginBottom="109dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/senator_2"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_rep"
        android:id="@+id/name_3"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:layout_alignTop="@+id/house_rep"
        android:layout_alignStart="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/democrat"
        android:id="@+id/party_3"
        android:layout_alignParentEnd="true"
        android:paddingLeft="45dp"
        android:layout_below="@+id/name_3"
        android:layout_alignLeft="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_3"
        android:id="@+id/email_3"
        android:layout_alignParentEnd="true"
        android:paddingLeft="45dp"
        android:layout_below="@+id/party_3"
        android:layout_alignLeft="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_3"
        android:id="@+id/website_3"
        android:paddingLeft="45dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/email_3"
        android:layout_alignLeft="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_3"
        android:id="@+id/tweet_3"
        android:paddingLeft="45dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/website_3"
        android:layout_alignLeft="@+id/textView14" />
</RelativeLayout>
